<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EncryptActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_encrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/encrypt"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/rl_key"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/green_border_rounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_encrypt">

            <ImageView
                android:id="@+id/img_key"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:src="@drawable/baseline_key_24" />

            <EditText
                android:id="@+id/ed_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/img_key"
                android:background="@android:color/transparent"
                android:hint="@string/key_hint"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/green_border_rounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_key">

            <ImageView
                android:id="@+id/img_text"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:src="@drawable/baseline_text_format_24" />

            <EditText
                android:id="@+id/ed_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/img_text"
                android:background="@android:color/transparent"
                android:hint="@string/encode_hint"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_img_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/green_border_rounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_text">

            <ImageView
                android:id="@+id/img_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:src="@drawable/baseline_image_24" />

            <TextView
                android:id="@+id/tv_image_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/img_image"
                android:background="@android:color/transparent"
                android:hint="@string/image_to_encrypt_hint"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="16sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/img_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_img_input"
            tools:srcCompat="@tools:sample/avatars"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/btn_encrypt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginVertical="24dp"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/encrypt"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_preview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>